# DCT-Algorithm-Verification-Cuda-

./: .cproject  .project  CMakeLists.txt  LICENSE  README.md
data/: sample_0.png.txt  sample_0.png_dct.txt
src/: BmpUtil.cu  BmpUtil.h  dct8x8.cu  dct8x8_kernel1.cuh  main.cpp
